ingress/preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: preview-albumui-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: green-albumui
      port:
        number: 3000
  rules:
  - host: preview.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: green-albumui
            port:
              number: 3000
